--- a/tiendaweb/principal/Templates/index.html
+++ b/tiendaweb/principal/Templates/index.html
@@ -82,27 +82,27 @@
                     />
                   </a>
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                </div>
-                <div class="card-footer" style="text-align: center">
-                  <p style="font-weight: bold">PRECIO: $212.990</p>
-                  <hr />
-                  <a href="{% url 'carrito' %}">
-                    <button
-                      type="button"
-                      class="btn btn-dark"
-                      style="margin-bottom: 5px"
-                    >
-                      AÑADIR AL CARRITO
-                    </button>
-                  </a>
-                </div>
+                {% for producto in Productos%}
+                  <div class="card-body">
+                    <h5 class="card-title">{{ producto.nombre }}</h5>
+                    <p class="card-text">
+                      {{ producto.descripcion }}
+                    </p>
+                  </div>
+                  <div class="card-footer" style="text-align: center">
+                    <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
+                    <hr />
+                    <a href="{% url 'carrito' %}">
+                      <button
+                        type="button"
+                        class="btn btn-dark"
+                        style="margin-bottom: 5px"
+                      >
+                        AÑADIR AL CARRITO
+                      </button>
+                    </a>
+                  </div>
+                {%endfor%}
               </div>
             </div>
           </div>
@@ -118,27 +118,27 @@
                     />
                   </a>
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                </div>
-                <div class="card-footer" style="text-align: center">
-                  <p style="font-weight: bold">PRECIO: $212.990</p>
-                  <hr />
-                  <a href="{% url 'carrito' %}">
-                    <button
-                      type="button"
-                      class="btn btn-dark"
-                      style="margin-bottom: 5px"
-                    >
-                      AÑADIR AL CARRITO
-                    </button>
-                  </a>
-                </div>
+                {% for producto in Productos%}
+                  <div class="card-body">
+                    <h5 class="card-title">{{ producto.nombre }}</h5>
+                    <p class="card-text">
+                      {{ producto.descripcion }}
+                    </p>
+                  </div>
+                  <div class="card-footer" style="text-align: center">
+                    <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
+                    <hr />
+                    <a href="{% url 'carrito' %}">
+                      <button
+                        type="button"
+                        class="btn btn-dark"
+                        style="margin-bottom: 5px"
+                      >
+                        AÑADIR AL CARRITO
+                      </button>
+                    </a>
+                  </div>
+                {%endfor%}
               </div>
             </div>
           </div>
@@ -154,27 +154,27 @@
                     />
                   </a>
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                </div>
-                <div class="card-footer" style="text-align: center">
-                  <p style="font-weight: bold">PRECIO: $212.990</p>
-                  <hr />
-                  <a href="{% url 'carrito' %}">
-                    <button
-                      type="button"
-                      class="btn btn-dark"
-                      style="margin-bottom: 5px"
-                    >
-                      AÑADIR AL CARRITO
-                    </button>
-                  </a>
-                </div>
+                {% for producto in Productos%}
+                  <div class="card-body">
+                    <h5 class="card-title">{{ producto.nombre }}</h5>
+                    <p class="card-text">
+                      {{ producto.descripcion }}
+                    </p>
+                  </div>
+                  <div class="card-footer" style="text-align: center">
+                    <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
+                    <hr />
+                    <a href="{% url 'carrito' %}">
+                      <button
+                        type="button"
+                        class="btn btn-dark"
+                        style="margin-bottom: 5px"
+                      >
+                        AÑADIR AL CARRITO
+                      </button>
+                    </a>
+                  </div>
+                {%endfor%}
               </div>
             </div>
           </div>
@@ -190,27 +190,27 @@
                     />
                   </a>
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                </div>
-                <div class="card-footer" style="text-align: center">
-                  <p style="font-weight: bold">PRECIO: $212.990</p>
-                  <hr />
-                  <a href="{% url 'carrito' %}">
-                    <button
-                      type="button"
-                      class="btn btn-dark"
-                      style="margin-bottom: 5px"
-                    >
-                      AÑADIR AL CARRITO
-                    </button>
-                  </a>
-                </div>
+                {% for producto in Productos%}
+                  <div class="card-body">
+                    <h5 class="card-title">{{ producto.nombre }}</h5>
+                    <p class="card-text">
+                      {{ producto.descripcion }}
+                    </p>
+                  </div>
+                  <div class="card-footer" style="text-align: center">
+                    <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
+                    <hr />
+                    <a href="{% url 'carrito' %}">
+                      <button
+                        type="button"
+                        class="btn btn-dark"
+                        style="margin-bottom: 5px"
+                      >
+                        AÑADIR AL CARRITO
+                      </button>
+                    </a>
+                  </div>
+                {%endfor%}
               </div>
             </div>
           </div>
@@ -226,16 +226,15 @@
                     />
                   </a>
                 </div>
+                {% for producto in Productos%}
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">{{ producto.nombre }}</h5>
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                    {{ producto.descripcion }}
                   </p>
                 </div>
                 <div class="card-footer" style="text-align: center">
-                  <p style="font-weight: bold">PRECIO: $212.990</p>
+                  <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
                   <hr />
                   <a href="{% url 'carrito' %}">
                     <button
@@ -247,6 +246,7 @@
                     </button>
                   </a>
                 </div>
+              {%endfor%}
               </div>
             </div>
           </div>
@@ -262,27 +262,27 @@
                     />
                   </a>
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                </div>
-                <div class="card-footer" style="text-align: center">
-                  <p style="font-weight: bold">PRECIO: $212.990</p>
-                  <hr />
-                  <a href="{% url 'carrito' %}">
-                    <button
-                      type="button"
-                      class="btn btn-dark"
-                      style="margin-bottom: 5px"
-                    >
-                      AÑADIR AL CARRITO
-                    </button>
-                  </a>
-                </div>
+                {% for producto in Productos%}
+                  <div class="card-body">
+                    <h5 class="card-title">{{ producto.nombre }}</h5>
+                    <p class="card-text">
+                      {{ producto.descripcion }}
+                    </p>
+                  </div>
+                  <div class="card-footer" style="text-align: center">
+                    <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
+                    <hr />
+                    <a href="{% url 'carrito' %}">
+                      <button
+                        type="button"
+                        class="btn btn-dark"
+                        style="margin-bottom: 5px"
+                      >
+                        AÑADIR AL CARRITO
+                      </button>
+                    </a>
+                  </div>
+                {%endfor%}
               </div>
             </div>
           </div>
@@ -298,27 +298,27 @@
                     />
                   </a>
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                </div>
-                <div class="card-footer" style="text-align: center">
-                  <p style="font-weight: bold">PRECIO: $212.990</p>
-                  <hr />
-                  <a href="{% url 'carrito' %}">
-                    <button
-                      type="button"
-                      class="btn btn-dark"
-                      style="margin-bottom: 5px"
-                    >
-                      AÑADIR AL CARRITO
-                    </button>
-                  </a>
-                </div>
+                {% for producto in Productos%}
+                  <div class="card-body">
+                    <h5 class="card-title">{{ producto.nombre }}</h5>
+                    <p class="card-text">
+                      {{ producto.descripcion }}
+                    </p>
+                  </div>
+                  <div class="card-footer" style="text-align: center">
+                    <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
+                    <hr />
+                    <a href="{% url 'carrito' %}">
+                      <button
+                        type="button"
+                        class="btn btn-dark"
+                        style="margin-bottom: 5px"
+                      >
+                        AÑADIR AL CARRITO
+                      </button>
+                    </a>
+                  </div>
+                {%endfor%}
               </div>
             </div>
           </div>
@@ -334,27 +334,27 @@
                     />
                   </a>
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                </div>
-                <div class="card-footer" style="text-align: center">
-                  <p style="font-weight: bold">PRECIO: $212.990</p>
-                  <hr />
-                  <a href="{% url 'carrito' %}">
-                    <button
-                      type="button"
-                      class="btn btn-dark"
-                      style="margin-bottom: 5px"
-                    >
-                      AÑADIR AL CARRITO
-                    </button>
-                  </a>
-                </div>
+                {% for producto in Productos%}
+                  <div class="card-body">
+                    <h5 class="card-title">{{ producto.nombre }}</h5>
+                    <p class="card-text">
+                      {{ producto.descripcion }}
+                    </p>
+                  </div>
+                  <div class="card-footer" style="text-align: center">
+                    <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
+                    <hr />
+                    <a href="{% url 'carrito' %}">
+                      <button
+                        type="button"
+                        class="btn btn-dark"
+                        style="margin-bottom: 5px"
+                      >
+                        AÑADIR AL CARRITO
+                      </button>
+                    </a>
+                  </div>
+                {%endfor%}
               </div>
             </div>
           </div>
@@ -364,7 +364,7 @@
     
     <section id="mapsec">
       <h1 style="text-align: center;"> Visita nuestra tienda!</h1>
-      <p style="text-align: center;">Para compras presenciales o retiro en tienda, ven a visitarnos en nuestra tienda física en Álvarez 2336, 2571188 Viña del Mar, Valparaíso. Te esperamos con ansias!</p>
+      <p style="text-align: center;">Para compras presenciales o retiro en tienda, visitanos en nuestra tienda física en Álvarez 2336, 2571188 Viña del Mar, Valparaíso. Te esperamos con ansias!</p>
       <div id="map"></div>
 
       <script src="{% static 'apigooglemap.JS' %}"></script>
