--- a/tiendaweb/principal/Templates/productos.html
+++ b/tiendaweb/principal/Templates/productos.html
@@ -3,14 +3,13 @@
 {% block body %}
 
     <div class="Titulo_prod"><h1 style="text-align: center">PRODUCTOS</h1></div>
-
     <div id="productosIndex" class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 g-3">
         <div class="col">
           <div id="cards_mas_pequennias">
             <div class="card h-100">
               <div id="img_cards">
-                <a href="vista_producto.html">
+                <a href="{% url 'vista_productos' %}">
                   <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                     class="card-img-top"
@@ -18,18 +17,17 @@
                   />
                 </a>
               </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-              </div>
-              <div class="card-footer" style="text-align: center">
-                <p style="font-weight: bold">PRECIO: $212.990</p>
+              {% for producto in Productos %}
+                <div class="card-body">
+                  <h5 class="card-title">{{ producto.nombre }} </h5>
+                  <p class="card-text">
+                    {{producto.descripcion}}
+                  </p>
+                </div>
+                <div class="card-footer" style="text-align: center">
+                  <p style="font-weight: bold">PRECIO: ${{producto.precio}}</p>
                 <hr />
-                <a href="carrito.html">
+                <a href="{% url 'carrito' %}">
                   <button
                     type="button"
                     class="btn btn-dark"
@@ -38,7 +36,8 @@
                     AÑADIR AL CARRITO
                   </button>
                 </a>
-              </div>
+                </div>
+              {%endfor%}
             </div>
           </div>
         </div>
@@ -46,7 +45,7 @@
           <div id="cards_mas_pequennias">
             <div class="card h-100">
               <div id="img_cards">
-                <a href="vista_producto.html">
+                <a href="{% url 'vista_productos' %}">
                   <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                     class="card-img-top"
@@ -54,18 +53,17 @@
                   />
                 </a>
               </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-              </div>
-              <div class="card-footer" style="text-align: center">
-                <p style="font-weight: bold">PRECIO: $212.990</p>
+              {% for producto in Productos %}
+                <div class="card-body">
+                  <h5 class="card-title">{{ producto.nombre }} </h5>
+                  <p class="card-text">
+                    {{producto.descripcion}}
+                  </p>
+                </div>
+                <div class="card-footer" style="text-align: center">
+                  <p style="font-weight: bold">PRECIO: ${{producto.precio}}</p>
                 <hr />
-                <a href="carrito.html">
+                <a href="{% url 'carrito' %}">
                   <button
                     type="button"
                     class="btn btn-dark"
@@ -74,7 +72,8 @@
                     AÑADIR AL CARRITO
                   </button>
                 </a>
-              </div>
+                </div>
+              {%endfor%}
             </div>
           </div>
         </div>
@@ -82,7 +81,7 @@
           <div id="cards_mas_pequennias">
             <div class="card h-100">
               <div id="img_cards">
-                <a href="vista_producto.html">
+                <a href="{% url 'vista_productos' %}">
                   <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                     class="card-img-top"
@@ -90,18 +89,17 @@
                   />
                 </a>
               </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-              </div>
-              <div class="card-footer" style="text-align: center">
-                <p style="font-weight: bold">PRECIO: $212.990</p>
+              {% for producto in Productos %}
+                <div class="card-body">
+                  <h5 class="card-title">{{ producto.nombre }} </h5>
+                  <p class="card-text">
+                    {{producto.descripcion}}
+                  </p>
+                </div>
+                <div class="card-footer" style="text-align: center">
+                  <p style="font-weight: bold">PRECIO: ${{producto.precio}}</p>
                 <hr />
-                <a href="carrito.html">
+                <a href="{% url 'carrito' %}">
                   <button
                     type="button"
                     class="btn btn-dark"
@@ -110,7 +108,8 @@
                     AÑADIR AL CARRITO
                   </button>
                 </a>
-              </div>
+                </div>
+              {%endfor%}
             </div>
           </div>
         </div>
@@ -118,7 +117,7 @@
           <div id="cards_mas_pequennias">
             <div class="card h-100">
               <div id="img_cards">
-                <a href="vista_producto.html">
+                <a href="{% url 'vista_productos' %}">
                   <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                     class="card-img-top"
@@ -126,18 +125,17 @@
                   />
                 </a>
               </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-              </div>
-              <div class="card-footer" style="text-align: center">
-                <p style="font-weight: bold">PRECIO: $212.990</p>
+              {% for producto in Productos %}
+                <div class="card-body">
+                  <h5 class="card-title">{{ producto.nombre }} </h5>
+                  <p class="card-text">
+                    {{producto.descripcion}}
+                  </p>
+                </div>
+                <div class="card-footer" style="text-align: center">
+                  <p style="font-weight: bold">PRECIO: ${{producto.precio}}</p>
                 <hr />
-                <a href="carrito.html">
+                <a href="{% url 'carrito' %}">
                   <button
                     type="button"
                     class="btn btn-dark"
@@ -146,7 +144,8 @@
                     AÑADIR AL CARRITO
                   </button>
                 </a>
-              </div>
+                </div>
+              {%endfor%}
             </div>
           </div>
         </div>
@@ -154,7 +153,7 @@
           <div id="cards_mas_pequennias">
             <div class="card h-100">
               <div id="img_cards">
-                <a href="vista_producto.html">
+                <a href="{% url 'vista_productos' %}">
                   <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                     class="card-img-top"
@@ -162,18 +161,17 @@
                   />
                 </a>
               </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-              </div>
-              <div class="card-footer" style="text-align: center">
-                <p style="font-weight: bold">PRECIO: $212.990</p>
+              {% for producto in Productos %}
+                <div class="card-body">
+                  <h5 class="card-title">{{ producto.nombre }} </h5>
+                  <p class="card-text">
+                    {{producto.descripcion}}
+                  </p>
+                </div>
+                <div class="card-footer" style="text-align: center">
+                  <p style="font-weight: bold">PRECIO: ${{producto.precio}}</p>
                 <hr />
-                <a href="carrito.html">
+                <a href="{% url 'carrito' %}">                  
                   <button
                     type="button"
                     class="btn btn-dark"
@@ -182,7 +180,8 @@
                     AÑADIR AL CARRITO
                   </button>
                 </a>
-              </div>
+                </div>
+              {%endfor%}
             </div>
           </div>
         </div>
@@ -190,7 +189,7 @@
           <div id="cards_mas_pequennias">
             <div class="card h-100">
               <div id="img_cards">
-                <a href="vista_producto.html">
+                <a href="{% url 'vista_productos' %}">
                   <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                     class="card-img-top"
@@ -198,18 +197,17 @@
                   />
                 </a>
               </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-              </div>
-              <div class="card-footer" style="text-align: center">
-                <p style="font-weight: bold">PRECIO: $212.990</p>
+              {% for producto in Productos %}
+                <div class="card-body">
+                  <h5 class="card-title">{{ producto.nombre }} </h5>
+                  <p class="card-text">
+                    {{producto.descripcion}}
+                  </p>
+                </div>
+                <div class="card-footer" style="text-align: center">
+                  <p style="font-weight: bold">PRECIO: ${{producto.precio}}</p>
                 <hr />
-                <a href="carrito.html">
+                <a href="{% url 'carrito' %}">
                   <button
                     type="button"
                     class="btn btn-dark"
@@ -218,7 +216,8 @@
                     AÑADIR AL CARRITO
                   </button>
                 </a>
-              </div>
+                </div>
+              {%endfor%}
             </div>
           </div>
         </div>
@@ -226,7 +225,7 @@
           <div id="cards_mas_pequennias">
             <div class="card h-100">
               <div id="img_cards">
-                <a href="vista_producto.html">
+                <a href="{% url 'vista_productos' %}">
                   <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                     class="card-img-top"
@@ -234,18 +233,17 @@
                   />
                 </a>
               </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-              </div>
-              <div class="card-footer" style="text-align: center">
-                <p style="font-weight: bold">PRECIO: $212.990</p>
+              {% for producto in Productos %}
+                <div class="card-body">
+                  <h5 class="card-title">{{ producto.nombre }} </h5>
+                  <p class="card-text">
+                    {{producto.descripcion}}
+                  </p>
+                </div>
+                <div class="card-footer" style="text-align: center">
+                  <p style="font-weight: bold">PRECIO: ${{producto.precio}}</p>
                 <hr />
-                <a href="carrito.html">
+                <a href="{% url 'carrito' %}">
                   <button
                     type="button"
                     class="btn btn-dark"
@@ -254,7 +252,8 @@
                     AÑADIR AL CARRITO
                   </button>
                 </a>
-              </div>
+                </div>
+              {%endfor%}
             </div>
           </div>
         </div>
@@ -262,7 +261,7 @@
           <div id="cards_mas_pequennias">
             <div class="card h-100">
               <div id="img_cards">
-                <a href="vista_producto.html">
+                <a href="{% url 'vista_productos' %}">
                   <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                     class="card-img-top"
@@ -270,18 +269,17 @@
                   />
                 </a>
               </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-              </div>
-              <div class="card-footer" style="text-align: center">
-                <p style="font-weight: bold">PRECIO: $212.990</p>
+              {% for producto in Productos %}
+                <div class="card-body">
+                  <h5 class="card-title">{{ producto.nombre }} </h5>
+                  <p class="card-text">
+                    {{producto.descripcion}}
+                  </p>
+                </div>
+                <div class="card-footer" style="text-align: center">
+                  <p style="font-weight: bold">PRECIO: ${{producto.precio}}</p>
                 <hr />
-                <a href="carrito.html">
+                <a href="{% url 'carrito' %}">
                   <button
                     type="button"
                     class="btn btn-dark"
@@ -290,7 +288,8 @@
                     AÑADIR AL CARRITO
                   </button>
                 </a>
-              </div>
+                </div>
+              {%endfor%}
             </div>
           </div>
         </div>
